--- a/css/style.css
+++ b/css/style.css
@@ -255,21 +255,14 @@ h3
 
 .allLegend
 {
-    margin: auto;
+    margin: 0 auto auto auto;
     width: 250px;
+    transition: all .4s ease-out;
 }
 
 .allLegend:hover
 {
-    animation: movingBlock 4s;
-}
-
-@keyframes movingBlock 
-{
-    0% {margin-top: 0px;}
-    20% {margin-top: 135px;}
-    80% {margin-top: 135px;}
-    100% {margin-top: 0px;}
+    margin-top: 135px;
 }
 
 
@@ -563,7 +556,8 @@ h3
         width: 80px;
     }
 
-    .button_navigation {
+    .button_navigation 
+    {
         font-size: 35px;
         padding: 6px;
         width: 50px;
@@ -574,6 +568,28 @@ h3
     {
         height: 300px !important;
         width: 600px !important;
+    }
+
+    /* RESA */
+    .stationBooked
+    {
+        margin-left: 0;
+    }
+    
+    .par
+    {
+        margin-left: 0px;
+    }
+    
+    .userName 
+    {
+        margin-top: -21px;
+        margin-left: 30px;
+    }
+
+    .timer
+    {
+        margin-left: 40%;
     }
 }
 
@@ -630,25 +646,36 @@ h3
     }
     .carousel_img img
     {
-        width: 230px !important;
+        margin: auto !important;
+        margin-left: -4% !important;
+        width: 280px !important;
     }
 
     .carousel_navigation
     {
         margin: auto !important;
-        margin-top: -150px !important;
-        width: 310px !important;
+        width: 140px !important;
     }
 
     .pause-start
     {
-        margin-top: 60px !important;
+        display: flex;
+        justify-content: space-around !important;
+        margin: 0px !important;
+        margin: auto !important;
+        margin-top: -25px !important;
     }
 
-    .button_navigation {
-        font-size: 25px;
-        padding: 4px;
-        width: 35px;
+    .button_navigation 
+    {
+        font-size: 18px;
+        padding: 2px;
+        width: 25px;
+    }
+
+    .button_navigation .nav-left 
+    {
+        margin-right: 100px !important;
     }
     
     /* MAP */
@@ -732,6 +759,13 @@ h3
     }
 
     /* ERRORMESSAGE */
+
+    .messageCurrentReservation
+    {
+        margin: auto;
+        padding: 8px;
+        width: 230px;
+    }
     
     .no-reservation
     {
